commonlib/src/smart/java/com/example/smarthome/iot/impl/device/negativecontrol/bean/FkDatsBean.java
package com.example.smarthome.iot.impl.device.negativecontrol.bean;

import java.io.Serializable;

public class FkDatsBean implements Serializable {
    private String name;
    private String location;
    private String deviceId;
    private int position;

    public int getPosition() {
        return position;
    }

    public void setPosition(int position) {
        this.position = position;
    }

    public String getDeviceId() {
        return deviceId;
    }

    public void setDeviceId(String deviceId) {
        this.deviceId = deviceId;
    }

    @Override
    public String toString() {
        return "FkDatsBean{" +
                "name='" + name + '\'' +
                ", location='" + location + '\'' +
                '}';
    }

    public String getLocation() {
        return location;
    }

    public void setLocation(String location) {
        this.location = location;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
